# cpp-gossip

./: .gitignore  CMakeLists.txt  README.md  a.out  client  client.cpp  cmakeConfig.h.in  main.cpp  pipe  pipe.cpp  server  server.cpp  temp  temp.cpp  笔记.md
include/: cmakeConfig.h  memberlist_temp.h
include/memberlist/: config.h  handlemsg.h  memberlist.h  node.h
include/misc/: broadcastQueue.h  broadcastQueue.hpp  config.h  node.h  safe_queue.hpp  suspicion.h  timer.h  timer.hpp  util.h  util.hpp
include/mynet/: broadcast.h  config.h  net.h  wrapped.h
include/type/: genmsg.h  msgtype.pb.h  msgtype.proto
memberlist/: handlemsg.h  memberlist.h  msgtype.h  node.h
memberlist/type/: genmsg.hpp  genmsg_test.cpp  msgtype.pb.cc  msgtype.pb.h  msgtype.proto  msgtype_test.cpp  test
misc/: queue.h  safe_queue.h  safe_queue.hpp  timer.hpp
net/: config.h  net.h  wrapped.h
src/: CMakeLists.txt  memberlist_temp.cpp
src/memberlist/: broadcast.cpp  config.cpp  handlemsg.cpp  memberlist.cpp  node.cpp  state.cpp
src/misc/: broadcastQueue.cpp  config.cpp  node.cpp  suspicion.cpp  timer.cpp  util.cpp
src/mynet/: broadcast.cpp  config.cpp  handlemsg.cpp  net.cpp  wrapped.cpp
src/type/: CMakeLists.txt  genmsg.cpp  msgtype.pb.cc
temp/: CMakeLists.txt  client.cpp  mytest  mytest.cpp  pipe.cpp  server.cpp  temp  temp.cpp
test/: CMakeLists.txt  broadcastQueue_test.cpp  config_test.cpp  genmsg_test.cpp  msgtype_test  msgtype_test.cpp  mutex_test.cpp  pipe_test.cpp  safe_queue_test  safe_queue_test.cpp  suspicion_test.cpp  test  test.cpp  threadlocal_test.cpp  timer_test  timer_test.cpp
